# zkvm-common

./: Cargo.toml  README.md
src/: db.rs  types.rs
