[package]
name = "kroma-zkvm-common"
version = "1.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["Ethan Yoo"]

[dependencies]
anyhow = { version = "1.0.86", default-features = false }
bincode = "1.3.3"
const-hex = "1.12.0"
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
serde = { version = "1.0.198", features = ["derive"] }
tracing = "0.1.40"

alloy-primitives = { version = "0.8.4", default-features = false, features = [
    "sha3-keccak",
] }
